<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/background_light"
    android:padding="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connecting_accaunt"
        android:textColor="@color/text_primary"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_partner_s_8_digit_code_it_s_located_in_their_profile"
        android:textColor="@color/text_secondary"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_marginBottom="24dp"/>

    <EditText
        android:id="@+id/etPartnerCode"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/bg_input_soft"
        android:hint="@string/for_example_12345678"
        android:inputType="number"
        android:maxLength="8"
        android:paddingHorizontal="16dp"
        android:gravity="center"
        android:letterSpacing="0.2"
        android:textStyle="bold"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_secondary"
        android:layout_marginBottom="24dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConnect"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/bg_input_field"
        android:backgroundTint="@color/baby_pink"
        android:text="@string/connect"
        android:textAllCaps="false"
        android:textColor="@color/text_primary"
        android:textStyle="bold"
        android:textSize="18sp"/>

</LinearLayout>
